<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>transportation_hub</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="916751792@qq.com">roc</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>judger</build_depend>
  <exec_depend>judger</exec_depend>
  <build_depend>judger_interfaces</build_depend>
  <exec_depend>judger_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>